Fix column shift when expanding notebook index

--- a/app/assets/stylesheets/app_components/notebooks_index/notebooks_index.scss
+++ b/app/assets/stylesheets/app_components/notebooks_index/notebooks_index.scss
@@ -70,6 +70,7 @@
             .caret{
                 padding: 5px;
                 padding-left: 15px;
+                max-width: 5px;
             }
         }
 
